Updated website title.

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "My Website",
-  "name": "My Website",
+  "short_name": "Gary's Website",
+  "name": "Gary's Website",
   "icons": [
     {
       "src": "favicon.ico",
